--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="wrapper">
-   <!-- <h2>heading</h2> -->
+        <!-- <h4>Headniing committed</h4> -->
         <section class="main-content">
             <div class="container">
                 <div class="main">
